    - Set the bar too, and skip the crashing ghosts
    - Setup the initial hidden surface
    - Setup the constant and decider combinators
    - Fill the constant combinator with the requirements
    - Check if all the starting items are present with circuits
    - Create crafter prototype with door light
    - Drop the glow visualization
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2025. 06. 08
  Info:
    - Listen for the build events
    - Persist factory index in ghosts
    - Make the factory index guesser more elaborate
    - Setup the 4 lines of luarendering
    - Set default luarendering text
    - Increment factory count upon placement
    - Decrement factory count when removing a factory
    - Mark the factories exempt from lightning
    - Support blueprinting
    - Unconfigure buildings when factory gets deleted
    - Have code ready to support copying by pipette
    - Render text for factory ghosts too
    - Override serpent better
    - Allow copy pasting between tiers and ghosts
    - Change factories from reversed array to indexed
    - Slight refresh optimizations
    - Allow selecting a factory from the sidebar
    - Prevent counter going haywire
    - Another early return
    - Select the selected to deselect
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2025. 06. 06
  Info:
    - Commence the left gui phase
    - Badly recreate the logistic section row
    - Slightly better frame
    - Scroll pane
    - Get close enough
    - Cleanup styles
    - Populate the list with actual factories
    - Support deleting factories
    - Cleanup factory deleter
    - Match fp factory name width and ... wrapping
    - Always show space location name
    - Pipette the factory item and remember the index
    - Delete old factories of the same name during exporting