@@ -7,3 +7,6 @@ summon-magic-hut=Export to magic hut.
 
 [space-location-name]
 magic-huts=Magic huts
+
+[recipe-name]
+magic-huts--recipe-i=Magic hut __1__
