@@ -10,6 +10,7 @@ Date: ????
     - Check if all the starting items are present with circuits
     - Create crafter prototype with door light
     - Drop the glow visualization
+    - Give each factory a 60s crafter
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.7
 Date: 2025. 06. 08
